# web_app_practice

./: dockerfile  main.py  pyproject.toml
.github/workflows/: build.yml  cicd.yml  deploy.yml  warmer.yml
