[tool.poetry]
name = "web-app-practice"
version = "0.1.0"
description = ""
authors = ["mariooohzc <mariohanzel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
aiocron = "^1.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
